fixed responsive problem the page was larger than it's content in mobile viewport used "overflow-x: hidden" to fix it

--- a/src/App.scss
+++ b/src/App.scss
@@ -50,6 +50,7 @@
 .pageContainer{
   flex-grow: 1;
   overflow-y: auto;
+  overflow-x: hidden;
   position: absolute;
   height: 100%;
   width: calc(100% - 200px);
@@ -57,6 +58,10 @@
 
   @media screen and (max-width: $mobile-breakpoint) {
     width: 100%;
-    // height: calc(100% - 70px);
   }
+}
+
+.pageWrapper {
+   width: 100%;
+   flex-direction: column;
 }
